[package]
name = "GNA-AEFR"
version = "0.8.4"
edition = "2021"
authors =["OxidizedSchale<3997101522@qq.com>"]
description = "GNA's Not AA : AEFR's Eternal Freedom & Rust-rendered - A high-performance, open-source editor for Blue Archive fan-content."
license = "AGPL-3.0-only" 
# build = "build.rs"

[lib]
name = "gna_lib"
crate-type = ["cdylib", "rlib"]
path = "src/main.rs"

[[bin]]
name = "gna"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.27", features =["wgpu", "persistence", "android-game-activity"] }
egui = "0.27"
egui_extras = { version = "0.27", features = ["all_loaders"] }
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
rusty_spine = { git = "https://github.com/jabuwu/rusty_spine3.8" }
rayon = "1.10"
rodio = { version = "0.19", features = ["wav", "vorbis", "mp3"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
embed-resource = "2.0.0"

# 安卓特定依赖
[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.5", features = ["game-activity"] }
jni = "0.21" # 引入 JNI 用于唤起安卓原生文件选择器 (SAF)

# === 将 rfd 设置为仅限桌面端使用 (已移除冗余的 tokio) ===
[target.'cfg(not(target_os = "android"))'.dependencies]
rfd = "0.14" # 文件选择器不在 Android 编译

# -----------------------------------------------------------------------------
# 【通用优化标志 - 根据 profile 自动应用】
# -----------------------------------------------------------------------------
[profile.release]
codegen-units = 1        # 更好的优化
lto = "thin"             # 链接时优化
opt-level = 3
strip = "debuginfo"      # 移除调试信息
# 注意：panic = "abort" 会禁用栈展开，可能导致内存泄漏
# 只有在确定不需要捕获 panic 时才启用
# panic = "abort"

[profile.dev]
opt-level = 0
debug = 2
incremental = true
debug-assertions = true  # 开发时启用调试断言
codegen-units = 256               # 增加并行编译单元，加速编译

[profile.test]
opt-level = 1
debug = 1
debug-assertions = true

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
